--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-confetti-explosion": "^2.0.2",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.9.3",
     "react-scripts": "5.0.1",
+    "tsparticles": "^2.9.3",
+    "tsparticles-preset-big-circles": "^2.9.3",
+    "tsparticles-preset-triangles": "^2.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
